[gd_scene load_steps=2 format=3 uid="uid://cj2adegb284b8"]

[ext_resource type="Script" path="res://ui/components/stage_panel.gd" id="1_dwvly"]

[node name="StagePanel" type="Panel"]
custom_minimum_size = Vector2(242, 87)
script = ExtResource("1_dwvly")

[node name="StageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 127.0
offset_bottom = 37.0
text = "Basic Concepts"

[node name="ProgressLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 49.0
offset_right = 59.0
offset_bottom = 72.0
text = "0/12"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.5
offset_right = -14.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Play"
